# gh-roady

./: .env.example  .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  optimisation-stockage-github-actions-raw.md
.github/workflows/: release.yml
src/: main.rs
src/app/: artifact_use_case.rs  auth_use_case.rs  mod.rs  repo_use_case.rs
src/domain/: artifact.rs  error.rs  github.rs  mod.rs  repo.rs  storage.rs  user.rs
src/infra/: mod.rs
src/infra/config/: mod.rs
src/infra/github/: auth.rs  client.rs
src/presenter/cli/: artifacts.rs  auth.rs  df.rs  mod.rs  repos.rs
src/presenter/tui/: app.rs  events.rs  mod.rs  ui.rs
tests/: cli_tests.rs
